tests/machine/x/ocaml/typed_var.ml
let x = ref 0

let () =
  print_endline !x
